src/platform-data-model/application-event/objects/Application_Event__e/Application_Event__e.object-meta.xml
<CustomObject>
    <label>Application Event</label>
    <pluralLabel>Application Events</pluralLabel>
</CustomObject>