src/platform-data-model/application-event/objects/Application_Event__e/fields/API_Request_Time__c.field-meta.xml
<CustomField>
    <fullName>API_Request_Time__c</fullName>
    <description>Time the API transaction entry is instantiated.</description>
    <label>API Request Time</label>
    <type>DateTime</type>
</CustomField>