src/platform-data-model/application-event/objects/Application_Event__e/fields/Application_Domain__c.field-meta.xml
<CustomField>
    <fullName>Application_Domain__c</fullName>
    <description>Specifies which area of the application the application log is connected to.</description>
    <label>Application Domain</label>
    <length>64</length>
    <type>Text</type>
</CustomField>