src/platform-data-model/application-event/objects/Application_Event__e/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Category within application domain to allow for further filtering og logs.</description>
    <label>Category</label>
    <length>32</length>
    <type>Text</type>
</CustomField>