src/platform-data-model/application-event/objects/Application_Event__e/fields/Log_Level__c.field-meta.xml
<CustomField>
    <fullName>Log_Level__c</fullName>
    <label>Log Level</label>
    <length>50</length>
    <type>Text</type>
</CustomField>