src/platform-data-model/application-event/objects/Application_Event__e/fields/Log_Messages__c.field-meta.xml
<CustomField>
    <fullName>Log_Messages__c</fullName>
    <label>Log Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>