src/platform-data-model/application-event/objects/Application_Event__e/fields/Reference_Info__c.field-meta.xml
<CustomField>
    <fullName>Reference_Info__c</fullName>
    <label>Reference Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>