src/platform-data-model/application-event/objects/Application_Event__e/fields/ReferenceId__c.field-meta.xml
<CustomField>
    <fullName>ReferenceId__c</fullName>
    <label>ReferenceId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>