src/platform-data-model/application-event/objects/Application_Event__e/fields/Request_URI__c.field-meta.xml
<CustomField>
    <fullName>Request_URI__c</fullName>
    <description>URI of an outbound or inbound API request</description>
    <label>Request URI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>