src/platform-data-model/application-event/objects/Application_Event__e/fields/Source_Class__c.field-meta.xml
<CustomField>
    <fullName>Source_Class__c</fullName>
    <description>The class the Event happened in</description>
    <label>Source Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>