src/platform-data-model/application-event/objects/Application_Event__e/fields/User_Context__c.field-meta.xml
<CustomField>
    <fullName>User_Context__c</fullName>
    <description>Reference to the user who was in context when the error occurred.</description>
    <label>User Context</label>
    <length>18</length>
    <type>Text</type>
</CustomField>