src/platform-data-model/application-event/objects/Application_Event__e/fields/UUID__c.field-meta.xml
<CustomField>
    <fullName>UUID__c</fullName>
    <description>Field containing a UUID generated by the logger framework.</description>
    <label>UUID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>